human-intervention-logs/org.apache.geronimo.specs:geronimo-jcdi_1.0_spec:1.0/gradle-test/gradle-test-2026-05-09T00-52-56-719001Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.geronimo.specs:geronimo-jcdi_1.0_spec:1.0
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:jar UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
11 actionable tasks: 1 executed, 10 up-to-date
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:43: error: cannot find symbol
import javax.enterprise.inject.DefinitionException;
                              ^
  symbol:   class DefinitionException
  location: package javax.enterprise.inject
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:44: error: cannot find symbol
import javax.enterprise.inject.DeploymentException;
                              ^
  symbol:   class DeploymentException
  location: package javax.enterprise.inject
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:161: error: cannot find symbol
        assertExceptionCarriesMessageAndCause(new DefinitionException("definition", cause), "definition", cause);
                                                  ^
  symbol:   class DefinitionException
  location: class Geronimo_jcdi_1_0_specTest
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:162: error: cannot find symbol
        assertExceptionCarriesMessageAndCause(new DeploymentException("deployment", cause), "deployment", cause);
                                                  ^
  symbol:   class DeploymentException
  location: class Geronimo_jcdi_1_0_specTest
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:43: error: cannot find symbol
  import javax.enterprise.inject.DefinitionException;
                                ^
    symbol:   class DefinitionException
    location: package javax.enterprise.inject
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:44: error: cannot find symbol
  import javax.enterprise.inject.DeploymentException;
                                ^
    symbol:   class DeploymentException
    location: package javax.enterprise.inject
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:161: error: cannot find symbol
          assertExceptionCarriesMessageAndCause(new DefinitionException("definition", cause), "definition", cause);
                                                    ^
    symbol:   class DefinitionException
    location: class Geronimo_jcdi_1_0_specTest
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/tests/src/org.apache.geronimo.specs/geronimo-jcdi_1.0_spec/1.0/src/test/java/org_apache_geronimo_specs/geronimo_jcdi_1_0_spec/Geronimo_jcdi_1_0_specTest.java:162: error: cannot find symbol
          assertExceptionCarriesMessageAndCause(new DeploymentException("deployment", cause), "deployment", cause);
                                                    ^
    symbol:   class DeploymentException
    location: class Geronimo_jcdi_1_0_specTest
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 3s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3139-152a61b9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.geronimo.specs:geronimo-jcdi_1.0_spec:1.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
9 actionable tasks: 1 executed, 8 up-to-date
